fixed spacing

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .header-background {
 	background-color: #082a78;
 	width: 100%;
-	'padding-top': 10;
+	padding-top: 10;
 	float: left;
 }
 
